--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
+    "next-cloudinary": "^6.12.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
